--- a/profiles/Groups/definitions/v1.0.md
+++ b/profiles/Groups/definitions/v1.0.md
@@ -361,6 +361,10 @@ profiles:
       /groups/{group-id}/sites/microsoft.graph.add: v1.0
       /groups/{group-id}/sites/microsoft.graph.remove: v1.0
       /groups/{group-id}/team/channels/{channel-id}/members/microsoft.graph.add: v1.0
+      /groups/{group-id}/team/channels/{channel-id}/messages/{chatMessage-id}/microsoft.graph.softDelete: v1.0
+      /groups/{group-id}/team/channels/{channel-id}/messages/{chatMessage-id}/microsoft.graph.undoSoftDelete: v1.0
+      /groups/{group-id}/team/channels/{channel-id}/messages/{chatMessage-id}/replies/{chatMessage-id1}/microsoft.graph.softDelete: v1.0
+      /groups/{group-id}/team/channels/{channel-id}/messages/{chatMessage-id}/replies/{chatMessage-id1}/microsoft.graph.undoSoftDelete: v1.0
       /groups/{group-id}/team/channels/{channel-id}/messages/{chatMessage-id}/replies/microsoft.graph.delta(): v1.0
       /groups/{group-id}/team/channels/{channel-id}/messages/microsoft.graph.delta(): v1.0
       /groups/{group-id}/team/channels/{channel-id}/microsoft.graph.completeMigration: v1.0
@@ -377,6 +381,10 @@ profiles:
       /groups/{group-id}/team/microsoft.graph.sendActivityNotification: v1.0
       /groups/{group-id}/team/microsoft.graph.unarchive: v1.0
       /groups/{group-id}/team/primaryChannel/members/microsoft.graph.add: v1.0
+      /groups/{group-id}/team/primaryChannel/messages/{chatMessage-id}/microsoft.graph.softDelete: v1.0
+      /groups/{group-id}/team/primaryChannel/messages/{chatMessage-id}/microsoft.graph.undoSoftDelete: v1.0
+      /groups/{group-id}/team/primaryChannel/messages/{chatMessage-id}/replies/{chatMessage-id1}/microsoft.graph.softDelete: v1.0
+      /groups/{group-id}/team/primaryChannel/messages/{chatMessage-id}/replies/{chatMessage-id1}/microsoft.graph.undoSoftDelete: v1.0
       /groups/{group-id}/team/primaryChannel/messages/{chatMessage-id}/replies/microsoft.graph.delta(): v1.0
       /groups/{group-id}/team/primaryChannel/messages/microsoft.graph.delta(): v1.0
       /groups/{group-id}/team/primaryChannel/microsoft.graph.completeMigration: v1.0
