--- a/profiles/Teams/definitions/v1.0.md
+++ b/profiles/Teams/definitions/v1.0.md
@@ -27,10 +27,14 @@ profiles:
       /chats/{chat-id}/messages/{chatMessage-id}: v1.0
       /chats/{chat-id}/messages/{chatMessage-id}/hostedContents: v1.0
       /chats/{chat-id}/messages/{chatMessage-id}/hostedContents/{chatMessageHostedContent-id}: v1.0
+      /chats/{chat-id}/messages/{chatMessage-id}/microsoft.graph.softDelete: v1.0
+      /chats/{chat-id}/messages/{chatMessage-id}/microsoft.graph.undoSoftDelete: v1.0
       /chats/{chat-id}/messages/{chatMessage-id}/replies: v1.0
       /chats/{chat-id}/messages/{chatMessage-id}/replies/{chatMessage-id1}: v1.0
       /chats/{chat-id}/messages/{chatMessage-id}/replies/{chatMessage-id1}/hostedContents: v1.0
       /chats/{chat-id}/messages/{chatMessage-id}/replies/{chatMessage-id1}/hostedContents/{chatMessageHostedContent-id}: v1.0
+      /chats/{chat-id}/messages/{chatMessage-id}/replies/{chatMessage-id1}/microsoft.graph.softDelete: v1.0
+      /chats/{chat-id}/messages/{chatMessage-id}/replies/{chatMessage-id1}/microsoft.graph.undoSoftDelete: v1.0
       /chats/{chat-id}/messages/{chatMessage-id}/replies/microsoft.graph.delta(): v1.0
       /chats/{chat-id}/messages/microsoft.graph.delta(): v1.0
       /chats/{chat-id}/microsoft.graph.hideForUser: v1.0
@@ -144,11 +148,15 @@ profiles:
       /teams/{team-id}/channels/{channel-id}/messages/{chatMessage-id}: v1.0
       /teams/{team-id}/channels/{channel-id}/messages/{chatMessage-id}/hostedContents: v1.0
       /teams/{team-id}/channels/{channel-id}/messages/{chatMessage-id}/hostedContents/{chatMessageHostedContent-id}: v1.0
+      /teams/{team-id}/channels/{channel-id}/messages/{chatMessage-id}/microsoft.graph.softDelete: v1.0
+      /teams/{team-id}/channels/{channel-id}/messages/{chatMessage-id}/microsoft.graph.undoSoftDelete: v1.0
       /teams/{team-id}/channels/{channel-id}/messages/{chatMessage-id}/replies: v1.0
       /teams/{team-id}/channels/{channel-id}/messages/{chatMessage-id}/replies/{chatMessage-id1}: v1.0
       /teams/{team-id}/channels/{channel-id}/messages/{chatMessage-id}/replies/{chatMessage-id1}/hostedContents: v1.0
       ? /teams/{team-id}/channels/{channel-id}/messages/{chatMessage-id}/replies/{chatMessage-id1}/hostedContents/{chatMessageHostedContent-id}
       : v1.0
+      /teams/{team-id}/channels/{channel-id}/messages/{chatMessage-id}/replies/{chatMessage-id1}/microsoft.graph.softDelete: v1.0
+      /teams/{team-id}/channels/{channel-id}/messages/{chatMessage-id}/replies/{chatMessage-id1}/microsoft.graph.undoSoftDelete: v1.0
       /teams/{team-id}/channels/{channel-id}/messages/{chatMessage-id}/replies/microsoft.graph.delta(): v1.0
       /teams/{team-id}/channels/{channel-id}/messages/microsoft.graph.delta(): v1.0
       /teams/{team-id}/channels/{channel-id}/microsoft.graph.completeMigration: v1.0
@@ -194,10 +202,14 @@ profiles:
       /teams/{team-id}/primaryChannel/messages/{chatMessage-id}: v1.0
       /teams/{team-id}/primaryChannel/messages/{chatMessage-id}/hostedContents: v1.0
       /teams/{team-id}/primaryChannel/messages/{chatMessage-id}/hostedContents/{chatMessageHostedContent-id}: v1.0
+      /teams/{team-id}/primaryChannel/messages/{chatMessage-id}/microsoft.graph.softDelete: v1.0
+      /teams/{team-id}/primaryChannel/messages/{chatMessage-id}/microsoft.graph.undoSoftDelete: v1.0
       /teams/{team-id}/primaryChannel/messages/{chatMessage-id}/replies: v1.0
       /teams/{team-id}/primaryChannel/messages/{chatMessage-id}/replies/{chatMessage-id1}: v1.0
       /teams/{team-id}/primaryChannel/messages/{chatMessage-id}/replies/{chatMessage-id1}/hostedContents: v1.0
       /teams/{team-id}/primaryChannel/messages/{chatMessage-id}/replies/{chatMessage-id1}/hostedContents/{chatMessageHostedContent-id}: v1.0
+      /teams/{team-id}/primaryChannel/messages/{chatMessage-id}/replies/{chatMessage-id1}/microsoft.graph.softDelete: v1.0
+      /teams/{team-id}/primaryChannel/messages/{chatMessage-id}/replies/{chatMessage-id1}/microsoft.graph.undoSoftDelete: v1.0
       /teams/{team-id}/primaryChannel/messages/{chatMessage-id}/replies/microsoft.graph.delta(): v1.0
       /teams/{team-id}/primaryChannel/messages/microsoft.graph.delta(): v1.0
       /teams/{team-id}/primaryChannel/microsoft.graph.completeMigration: v1.0
