Weekly OpenApiDocs Download.

--- a/profiles/Devices.CloudPrint/definitions/v1.0.md
+++ b/profiles/Devices.CloudPrint/definitions/v1.0.md
@@ -34,6 +34,7 @@ profiles:
       /print/shares/{printerShare-id}/allowedGroups/$ref: v1.0
       /print/shares/{printerShare-id}/allowedUsers: v1.0
       /print/shares/{printerShare-id}/allowedUsers/{user-id}/$ref: v1.0
+      /print/shares/{printerShare-id}/allowedUsers/{user-id}/mailboxSettings: v1.0
       /print/shares/{printerShare-id}/allowedUsers/$ref: v1.0
       /print/shares/{printerShare-id}/printer: v1.0
       /print/taskDefinitions: v1.0
