--- a/profiles/Education/definitions/v1.0-beta.md
+++ b/profiles/Education/definitions/v1.0-beta.md
@@ -89,6 +89,7 @@ profiles:
       /education/me/taughtClasses: v1.0-beta
       /education/me/taughtClasses/{educationClass-id}: v1.0-beta
       /education/me/user: v1.0-beta
+      /education/me/user/mailboxSettings: v1.0-beta
       /education/schools: v1.0-beta
       /education/schools/{educationSchool-id}: v1.0-beta
       /education/schools/{educationSchool-id}/administrativeUnit: v1.0-beta
@@ -147,6 +148,7 @@ profiles:
       /education/users/{educationUser-id}/taughtClasses: v1.0-beta
       /education/users/{educationUser-id}/taughtClasses/{educationClass-id}: v1.0-beta
       /education/users/{educationUser-id}/user: v1.0-beta
+      /education/users/{educationUser-id}/user/mailboxSettings: v1.0-beta
       /education/users/microsoft.graph.delta(): v1.0-beta
 
 ```
