--- a/profiles/Security/definitions/v1.0-beta.md
+++ b/profiles/Security/definitions/v1.0-beta.md
@@ -146,8 +146,10 @@ profiles:
       /security/subjectRightsRequests/{subjectRightsRequest-id}: v1.0-beta
       /security/subjectRightsRequests/{subjectRightsRequest-id}/approvers: v1.0-beta
       /security/subjectRightsRequests/{subjectRightsRequest-id}/approvers/{user-id}: v1.0-beta
+      /security/subjectRightsRequests/{subjectRightsRequest-id}/approvers/{user-id}/mailboxSettings: v1.0-beta
       /security/subjectRightsRequests/{subjectRightsRequest-id}/collaborators: v1.0-beta
       /security/subjectRightsRequests/{subjectRightsRequest-id}/collaborators/{user-id}: v1.0-beta
+      /security/subjectRightsRequests/{subjectRightsRequest-id}/collaborators/{user-id}/mailboxSettings: v1.0-beta
       /security/subjectRightsRequests/{subjectRightsRequest-id}/microsoft.graph.getFinalAttachment(): v1.0-beta
       /security/subjectRightsRequests/{subjectRightsRequest-id}/microsoft.graph.getFinalReport(): v1.0-beta
       /security/subjectRightsRequests/{subjectRightsRequest-id}/notes: v1.0-beta
