--- a/profiles/Users.Actions/definitions/v1.0-beta.md
+++ b/profiles/Users.Actions/definitions/v1.0-beta.md
@@ -453,6 +453,8 @@ profiles:
       /users/{user-id}/mailFolders/{mailFolder-id}/childFolders/{mailFolder-id1}/messages/{message-id}/microsoft.graph.createReply: v1.0-beta
       /users/{user-id}/mailFolders/{mailFolder-id}/childFolders/{mailFolder-id1}/messages/{message-id}/microsoft.graph.createReplyAll: v1.0-beta
       /users/{user-id}/mailFolders/{mailFolder-id}/childFolders/{mailFolder-id1}/messages/{message-id}/microsoft.graph.forward: v1.0-beta
+      /users/{user-id}/mailFolders/{mailFolder-id}/childFolders/{mailFolder-id1}/messages/{message-id}/microsoft.graph.markAsJunk: v1.0-beta
+      /users/{user-id}/mailFolders/{mailFolder-id}/childFolders/{mailFolder-id1}/messages/{message-id}/microsoft.graph.markAsNotJunk: v1.0-beta
       /users/{user-id}/mailFolders/{mailFolder-id}/childFolders/{mailFolder-id1}/messages/{message-id}/microsoft.graph.move: v1.0-beta
       /users/{user-id}/mailFolders/{mailFolder-id}/childFolders/{mailFolder-id1}/messages/{message-id}/microsoft.graph.reply: v1.0-beta
       /users/{user-id}/mailFolders/{mailFolder-id}/childFolders/{mailFolder-id1}/messages/{message-id}/microsoft.graph.replyAll: v1.0-beta
@@ -466,6 +468,8 @@ profiles:
       /users/{user-id}/mailFolders/{mailFolder-id}/messages/{message-id}/microsoft.graph.createReply: v1.0-beta
       /users/{user-id}/mailFolders/{mailFolder-id}/messages/{message-id}/microsoft.graph.createReplyAll: v1.0-beta
       /users/{user-id}/mailFolders/{mailFolder-id}/messages/{message-id}/microsoft.graph.forward: v1.0-beta
+      /users/{user-id}/mailFolders/{mailFolder-id}/messages/{message-id}/microsoft.graph.markAsJunk: v1.0-beta
+      /users/{user-id}/mailFolders/{mailFolder-id}/messages/{message-id}/microsoft.graph.markAsNotJunk: v1.0-beta
       /users/{user-id}/mailFolders/{mailFolder-id}/messages/{message-id}/microsoft.graph.move: v1.0-beta
       /users/{user-id}/mailFolders/{mailFolder-id}/messages/{message-id}/microsoft.graph.reply: v1.0-beta
       /users/{user-id}/mailFolders/{mailFolder-id}/messages/{message-id}/microsoft.graph.replyAll: v1.0-beta
@@ -530,6 +534,8 @@ profiles:
       /users/{user-id}/messages/{message-id}/microsoft.graph.createReply: v1.0-beta
       /users/{user-id}/messages/{message-id}/microsoft.graph.createReplyAll: v1.0-beta
       /users/{user-id}/messages/{message-id}/microsoft.graph.forward: v1.0-beta
+      /users/{user-id}/messages/{message-id}/microsoft.graph.markAsJunk: v1.0-beta
+      /users/{user-id}/messages/{message-id}/microsoft.graph.markAsNotJunk: v1.0-beta
       /users/{user-id}/messages/{message-id}/microsoft.graph.move: v1.0-beta
       /users/{user-id}/messages/{message-id}/microsoft.graph.reply: v1.0-beta
       /users/{user-id}/messages/{message-id}/microsoft.graph.replyAll: v1.0-beta
@@ -548,6 +554,7 @@ profiles:
       /users/{user-id}/microsoft.graph.removeAllDevicesFromManagement: v1.0-beta
       /users/{user-id}/microsoft.graph.reprocessLicenseAssignment: v1.0-beta
       /users/{user-id}/microsoft.graph.restore: v1.0-beta
+      /users/{user-id}/microsoft.graph.retryServiceProvisioning: v1.0-beta
       /users/{user-id}/microsoft.graph.revokeSignInSessions: v1.0-beta
       /users/{user-id}/microsoft.graph.sendMail: v1.0-beta
       /users/{user-id}/microsoft.graph.translateExchangeIds: v1.0-beta
