Weekly OpenApiDocs Download.

--- a/profiles/Groups/definitions/v1.0.md
+++ b/profiles/Groups/definitions/v1.0.md
@@ -439,5 +439,16 @@ profiles:
       /groups/microsoft.graph.validateProperties: v1.0
       /groupSettings: v1.0
       /groupSettings/{groupSetting-id}: v1.0
+      /groupSettingTemplates: v1.0
+      /groupSettingTemplates/{groupSettingTemplate-id}: v1.0
+      /groupSettingTemplates/{groupSettingTemplate-id}/microsoft.graph.checkMemberGroups: v1.0
+      /groupSettingTemplates/{groupSettingTemplate-id}/microsoft.graph.checkMemberObjects: v1.0
+      /groupSettingTemplates/{groupSettingTemplate-id}/microsoft.graph.getMemberGroups: v1.0
+      /groupSettingTemplates/{groupSettingTemplate-id}/microsoft.graph.getMemberObjects: v1.0
+      /groupSettingTemplates/{groupSettingTemplate-id}/microsoft.graph.restore: v1.0
+      /groupSettingTemplates/microsoft.graph.delta(): v1.0
+      /groupSettingTemplates/microsoft.graph.getAvailableExtensionProperties: v1.0
+      /groupSettingTemplates/microsoft.graph.getByIds: v1.0
+      /groupSettingTemplates/microsoft.graph.validateProperties: v1.0
 
 ```
